# Suppressive-and-Emergent-Phenomenon

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  NOTICE  PAPER_8_ADVERSARIAL_HORIZON.md  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
labs/: __init__.py
labs/paper8_adversarial_horizon/: phenomena_adversarial_horizon.py  phenomena_detection_signatures.py  phenomena_kappa_collapse.py  phenomena_recursive_immunity.py
mbd/: __init__.py  paper8.py
